<resources>
    <string name="app_name">loginpart</string>
    <string name="application">GAME AND TRAVEL</string>
    <string name="app_description">Have fun while you are learning the history!</string>
    <string name="register_description">Create a New Account</string>
    <string name="name_hint">Full Name</string>
    <string name="email_hint">Email Address</string>
    <string name="pw_hint">Password</string>
    <string name="pw2_hint">Re-Enter Password</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="spinner_job_hint">Your Job</string>
    <string name="spinner_age_hint">Your Age</string>
    <string name="already_registered">Are you already registered? Login here.</string>
    <string name="new_member_text">Are you new here? Register here.</string>
    <string name="btnLogout">LOGOUT</string>
    <string name="mainHeader">Your Profile</string>
    <string name="yourName">Your Name</string>
    <string name="yourEmail_address">Your Email</string>
    <string name="yourJob">Your Job</string>
    <string name="yourAge">Your Age</string>
    <string name="mailVerify">Email Not Verified !</string>
    <string name="btnVerify">Verify Now</string>
    <string name="forgotPassword">Forgot your password? Click here.</string>
    <string name="changeEmail">Change email address</string>
    <string name="changePassword">Change password</string>
    <string name="appLogo"/>
    <string name="enterYourEmail">Please enter your email address</string>
    <string name="sendPass">Reset my password</string>
    <string name="logOutProfile">LOGOUT</string>
    <string name="floorPlan"/>
    <string name="collection1">C1</string>
    <string name="collection2">C2</string>
    <string name="collection3">C3</string>
    <string name="collection4">C4</string>
    <string name="collection5">C5</string>
    <string name="collection6">C6</string>
    <string name="collection7">C7</string>
    <string name="collection8">C8</string>
    <string name="collection9">C9</string>
    <string name="collection10">C10</string>
    <string name="collection11">C11</string>
    <string name="playerButton">P</string>
    <string name="artifactButton">MOVE!</string>
    <string name="blankText"/>
    <string name="badgeHeader">BADGES</string>


    <string-array name="jobs">
        <item>Select Your Job</item>
        <item>Student</item>
        <item>Teacher</item>
        <item>Other</item>
    </string-array>

    <string-array name="ages">
        <item>Select Your Age</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_demo">Demo</string>


</resources>
