<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.profile.ChangePassword">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="216dp"
        android:layout_height="219dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/appLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kedi" />

    <TextView
        android:id="@+id/txtChangePassHeader"
        android:layout_width="331dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/enterYourEmail"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmailAddress"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangePassHeader"
        tools:hint="@string/email_hint" />

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendPass"
        app:layout_constraintBottom_toTopOf="@+id/appLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailAddress" />
</androidx.constraintlayout.widget.ConstraintLayout>