<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/txtMainName"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="617dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/yourName"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/txtMainMail"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="567dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/yourEmail_address"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/txtMainJob"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="522dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/yourJob"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtMainAge"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="479dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/yourAge"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtVerifyMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="206dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="731dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/mailVerify"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="425dp"
        android:columnWidth="150dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:scrollbars="vertical"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="24dp" />

    <TextView
        android:id="@+id/tv_badges"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="380dp"
        android:text="@string/badgeHeader"
        android:textColor="#090909"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogoutProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="80dp"
        android:text="LOGOUT" />

    <Button
        android:id="@+id/ch_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:text="Change Email Adress" />

    <Button
        android:id="@+id/ch_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="300dp"
        android:text="Change Password" />

</RelativeLayout>